@@ -13,6 +13,12 @@
 - [XBMC] Has Excessive Memory use after running the plugin for prolonged periods of time
 - [RTMPDUMP] Doesn't support handshake type 10 which is required by youtube.
 
+[B]Version 3.4.4[/B]
+- Fixed playback after youtube javascript site changes
+- Fixed age verification, by making playback always do a full http login on restricted videos since google changed their detection algorithm
+- Fixed addition of User Agent was causing problems for Windows and IOS clients. (Thanks to m-hume on github for the fix)
+- Fixed download folder was not working for new users of the plugin. (Thanks to Ste Robinson, for pointing this out again)
+
 [B]Version 3.4.3[/B]
 - Fixed login
 
